--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/e2b9d7d397.js" crossorigin="anonymous"></script>
     <title>Hello bears, RAWR XD</title>
   </head>
   <body>
